--- a/qdrant-landing/themes/qdrant-2024/assets/css/syntax-highlight.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/syntax-highlight.scss
@@ -13,6 +13,7 @@ article code:not([class]) {
   background: $neutral-20;
   margin-bottom: 1rem;
   border-radius: $code-snippet-border-radius;
+
 }
 .highlight + .highlight {
   display: none;
@@ -25,6 +26,23 @@ article code:not([class]) {
 /* PreWrapper */
 .chroma {
   background-color: $neutral-20;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $neutral-50;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $neutral-20;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: $neutral-50;
+  }
+  scrollbar-width: thin;
+  scrollbar-color: $neutral-50 $neutral-20;
 }
 /* Other */
 .chroma .x {
